# octorules-bunny

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
docs/: lint.md
docs/lint/: README.md  access-list.md  best-practice.md  condition.md  cross-rule.md  edge-rule.md  enums.md  rate-limit.md  structure.md  transformations.md  variable-subvalue.md
octorules_bunny/: __init__.py  _client.py  _config_base.py  _curated_lists.py  _enums.py  _phases.py  _pullzone_security.py  _shield_config.py  audit.py  provider.py  validate.py
octorules_bunny/linter/: __init__.py  _plugin.py  _rules.py
scripts/hooks/: pre-commit
tests/: conftest.py  test_access_list_perf.py  test_audit.py  test_cli_lint.py  test_client.py  test_condition_keys.py  test_config_base.py  test_curated_threat_lists.py  test_edge_pattern_validation.py  test_edge_rules.py  test_enums.py  test_iter_phases.py  test_missing_shield_fields.py  test_new_lint_rules.py  test_new_shield_features.py  test_normalization.py  test_performance.py  test_provider.py  test_pullzone_security.py  test_registration.py  test_resilience.py  test_shield_config.py  test_validate.py
tests/test_linter/: conftest.py  test_cross_phase_checks.py  test_phase_filter.py  test_plugin.py  test_registration.py  test_unreachable_rules.py
